--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,6 +16,10 @@
     "importHelpers": true,
     "target": "es2017",
     "module": "es2020",
+    "typeRoots": [
+      "node_module/@types",
+      "src/alertifytype.d.ts"
+    ],
     "lib": [
       "es2018",
       "dom"
